--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">ZSDK Developer Demos</string>
+    <string name="app_name">PDA Duplicator</string>
 
     <string-array name="DEMO_APPS">
         <item>Printer Setup</item>
